# impira-python

./: .arcconfig  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  setup.cfg  setup.py
docs/: commands.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  sdk.html  search.html  searchindex.js
docs/_sources/: index.md.txt  install.md.txt
docs/_sources/commands/: infer-fields.md.txt  snapshot.md.txt
docs/_sources/stubs/: impira.Impira.rst.txt
docs/commands/: bootstrap.html  infer-fields.html  snapshot.html
docs/stubs/: impira.Impira.html
docsrc/: commands.rst  conf.py  index.md  install.md  publish-docs.sh  sdk.rst
docsrc/commands/: bootstrap.md
examples/: accuracy_metrics.py  benchmark.py  copy_fields.py  download_all_collections_query.py  load_from_s3.py  upload_and_split_files.py  upload_files.py
src/impira/: __init__.py  api.py  api_v2.py  config.py  credentials.py  fmt.py  schema.py  types.py  utils.py
src/impira/cmd/: __main__.py  bootstrap.py  capture.py  login.py  snapshot.py  snapshot_collections.py  utils.py
src/impira/tools/: impira.py  textract.py  tool.py
