[metadata]
name = impira
version = 0.0.1
author = Impira Engineering
author_email = engineering@impira.com
description = Impira API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/impira/impira-python
project_urls =
    Bug Tracker = https://github.com/impira/impira-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
